karl package Changelog
======================

Unreleased
----------

- Derive ``creator`` for uploaded photo from the current user, rather than
  the container's name. (LP #633191)

- Improve contentfeeds description of content added / modified inside a
  profile. (LP #628285)

- Workflow initialization is now delayed for temporary images created by
  Image Drawer when uploading images in the context of an 'Add Content' form.
  (LP #619977)

- Added fault tolerance for 'None' values from formish for blog entry
  attachments. (LP #618074)

- Fixed 'add_user' script to initialize workflow for new profile.

- Added form validation to catch years earlier than 1900. (LP# 632451)

3.44 (2010-09-02)
-----------------

- Un-broke the ``manage_tags.html`` view due to clash over main template's
  use of top-level ``tags`` name. (LP #629009)

- Made sure icon is centered on filter indicator button. (LP #628833)

- Fixed filter button display in IE. (LP #628281)

- Merged ``ree-jsupgrade-2-tiny`` branch.

  - Upgraded TinyMCE WYSIWYG widget.

  - Upgraded jQuery libraries.

- Merged ``chrissy-portlets`` branch:

 - Updated intranet portlets to conform to site portlet styles

 - Cleaned up Active People portlet

 - Added DOCTYPE, so IE displays in standards mode

 - Updated styles that changed as a result of adding DOCTYPE

 - Moved portlets out of ``#center``, conforming styles for admin
   pages, community pages, generic layout

- Added ``--index`` option to ``reindex_catalog`` script, to allow rebuilding
  only a given index.

- Merged ``content_feeds2`` branch, adding top-level content feeds tab.
  This tab allows users to see recent changes across all communities in
  which they participate.

- Merged ``active_communities`` branch, implementing the "active communities"
  blueprint:
  https://blueprints.launchpad.net/karl3/+spec/active-communities-tab

- XSLT fix for people pages broken by unclosed divs. (LP #602889)
